Wework : scoprecap section

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -25,3 +25,4 @@ $darkGray: #233735;
 
 @import "../styles/components/nav.scss";
 @import "../styles/home.scss";
+@import "../styles/components/scopRecap.scss";
