--- a/styles/components/nav.scss
+++ b/styles/components/nav.scss
@@ -24,6 +24,7 @@
     top: 0;
     left: 0;
     z-index: 900;
+    background-color: $appBg;
     &-close {
       cursor: pointer;
       position: absolute;
