--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -20,9 +20,13 @@ $darkGray: #233735;
   margin: 0;
   padding: 0;
   outline: none;
+}
+body {
   background-color: $appBg;
 }
 
 @import "../styles/components/nav.scss";
 @import "../styles/home.scss";
 @import "../styles/components/scopRecap.scss";
+@import "../styles/components/tabs.scss";
+@import "../styles/components/compProfile.scss";
