--- a/styles/components/compProfile.scss
+++ b/styles/components/compProfile.scss
@@ -1,23 +1,105 @@
 .compProfile {
   margin: 18px 10px;
+
+  @media screen and (min-width: 768px) {
+    margin: 20px 30px;
+    display: flex;
+  }
+
   &-left {
     display: none;
+    @media screen and (min-width: 1024px) {
+      display: flex;
+      flex-direction: column;
+      max-width: 190px;
+      background-color: #fff;
+      height: fit-content;
+      padding: 15px 15px;
+      border-radius: 10px;
+      width: 100%;
+      h5,
+      li {
+        font-family: "prox", sans-serif;
+        border-bottom: 1px solid #e9ebeb;
+        padding: 13px 0;
+        color: #7b8786;
+        padding-left: 5px;
+        font-size: 14px;
+        cursor: pointer;
+      }
+
+      h5 {
+        color: #657372;
+        font-weight: bold;
+        font-size: 16px;
+      }
+
+      ul {
+        > li:last-child {
+          border: none;
+        }
+        li {
+          list-style: none;
+        }
+      }
+    }
+  }
+  &-right {
+    width: 100%;
+    @media screen and (min-width: 1024px) {
+      margin-left: 20px;
+    }
   }
   &__container {
     display: flex;
     justify-content: space-between;
     margin-bottom: 10px;
+    @media screen and (min-width: 768px) {
+      margin-bottom: 20px;
+    }
   }
   &__nav {
     display: flex;
     justify-content: space-between;
 
+    @media screen and (min-width: 768px) {
+      width: 100%;
+    }
+
     h2 {
       font-size: 16px;
       font-family: "prox", sans-serif;
+      @media screen and (min-width: 768px) {
+        font-size: 25px;
+      }
+    }
+    &-more-image {
+      @media screen and (min-width: 768px) {
+        display: none;
+      }
     }
     &-triggers {
       display: none;
+      @media screen and (min-width: 768px) {
+        display: flex;
+        align-items: center;
+        border: 1px solid #d3d7d7;
+        border-radius: 5px;
+        padding: 4px 5px;
+
+        > img:last-child {
+          border: none;
+        }
+
+        img {
+          width: 20px;
+          height: 17px;
+          object-fit: contain;
+          padding: 0 9px;
+          border-right: 1px solid #d3d7d7;
+          cursor: pointer;
+        }
+      }
     }
   }
 
@@ -30,6 +112,11 @@
     flex-direction: column;
     align-items: center;
     position: relative;
+
+    @media screen and (min-width: 768px) {
+      height: 400px;
+    }
+
     &-cont,
     &-cont-inner,
     &-details {
@@ -44,6 +131,10 @@
       border: 1px solid #d3d7d7;
       margin-top: 10px;
 
+      @media screen and (min-width: 768px) {
+        margin-top: 20px;
+      }
+
       > div:last-child {
         border: none;
       }
@@ -56,6 +147,11 @@
           width: 17px;
           height: 17px;
           cursor: pointer;
+          @media screen and (min-width: 768px) {
+            width: 24px;
+            height: 24px;
+            object-fit: contain;
+          }
         }
         span {
           margin-left: 3px;
@@ -77,15 +173,29 @@
       height: 107px;
       transform: translate(-50%, -50%);
 
+      @media screen and (min-width: 768px) {
+        width: 420px;
+        height: 160px;
+      }
+
       img {
         width: 119px;
         height: 30px;
+        @media screen and (min-width: 768px) {
+          width: 288px;
+          height: 65px;
+          object-fit: contain;
+        }
       }
 
       h3 {
         margin-top: 11px;
         font-size: 13px;
         font-family: "prox", sans-serif;
+        @media screen and (min-width: 768px) {
+          margin-top: 18px;
+          font-size: 20px;
+        }
       }
     }
   }
@@ -97,6 +207,11 @@
     img {
       width: 18px;
       height: 18px;
+      object-fit: contain;
+      @media screen and (min-width: 768px) {
+        width: 25px;
+        height: 25px;
+      }
     }
 
     &-chat-cont {
@@ -110,6 +225,9 @@
         font-size: 10px;
         padding: 1px 4px;
         border-radius: 16px;
+        @media screen and (min-width: 768px) {
+          font-size: 12px;
+        }
       }
     }
 
