--- a/styles/components/nav.scss
+++ b/styles/components/nav.scss
@@ -2,6 +2,14 @@
   margin: 21px 11px 0px 11px;
   padding-bottom: 10px;
   border-bottom: 1px solid $lightWhite;
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 14px;
+    margin: 18px 30px 0 30px;
+  }
+
   &__logo-container {
     display: flex;
     justify-content: space-between;
@@ -14,6 +22,9 @@
     }
     &-hamburger {
       cursor: pointer;
+      @media screen and (min-width: 768px) {
+        display: none;
+      }
     }
   }
 
@@ -25,11 +36,20 @@
     left: 0;
     z-index: 900;
     background-color: $appBg;
+
+    @media screen and (min-width: 768px) {
+      position: static;
+      width: fit-content;
+    }
+
     &-close {
       cursor: pointer;
       position: absolute;
       top: 30px;
       right: 17px;
+      @media screen and (min-width: 768px) {
+        display: none;
+      }
     }
     &-list {
       display: flex;
@@ -38,11 +58,24 @@
       align-items: center;
       margin: 84px 54px 0 54px;
 
+      @media screen and (min-width: 768px) {
+        margin: 0;
+        flex-direction: row;
+        width: fit-content;
+      }
+
       > li:first-child {
+        @media screen and (min-width: 768px) {
+          order: 5;
+        }
+
         img {
           width: 45px;
           height: 45px;
           margin-right: 10px;
+          @media screen and (min-width: 768px) {
+            margin: 0;
+          }
         }
       }
 
@@ -55,6 +88,13 @@
         max-width: 252px;
         width: 100%;
         cursor: pointer;
+
+        @media screen and (min-width: 768px) {
+          border: none;
+          margin: 0;
+          padding: 0;
+        }
+
         img {
           width: 22px;
           height: 22px;
@@ -64,9 +104,15 @@
         &-link {
           color: $darkGray;
           font-family: "prox", sans-serif;
+          @media screen and (min-width: 768px) {
+            display: none;
+          }
         }
 
         &-userDetails {
+          @media screen and (min-width: 768px) {
+            display: none;
+          }
           h5 {
             font-size: 16px;
             font-family: "prox", sans-serif;
