--- a/styles/components/scopRecap.scss
+++ b/styles/components/scopRecap.scss
@@ -3,9 +3,16 @@
   margin: 15px 10px;
   justify-content: space-between;
   align-items: center;
+  @media screen and (min-width: 768px) {
+    margin: 20px 30px;
+  }
+
   h2 {
     font-family: "prox", sans-serif;
     font-size: 16px;
+    @media screen and (min-width: 768px) {
+      font-size: 25px;
+    }
   }
   &__progress {
     max-width: 170px;
@@ -23,6 +30,9 @@
         font-size: 12px;
         font-family: "prox", sans-serif;
         font-weight: 300;
+        @media screen and (min-width: 768px) {
+          font-size: 14px;
+        }
       }
       &-percent {
         color: $lightGreen !important;
