--- a/styles/components/tabs.scss
+++ b/styles/components/tabs.scss
@@ -6,6 +6,9 @@
     margin: 0 10px;
     justify-content: space-between;
     border-bottom: 1px solid $lightWhite;
+    @media screen and (min-width: 768px) {
+      margin: 0 30px;
+    }
   }
 
   &-li {
@@ -19,12 +22,21 @@
     border-top-right-radius: 5px;
     cursor: pointer;
     font-family: "prox", sans-serif;
+
+    @media screen and (min-width: 768px) {
+      font-size: 16px;
+    }
+
     &-active {
       background-color: #fff !important;
       color: $lightGreen !important;
     }
     &-internal {
       display: none;
+      @media screen and (min-width: 768px) {
+        display: block;
+        margin-right: 0;
+      }
     }
   }
 }
