--- a/styles/home.scss
+++ b/styles/home.scss
@@ -5,6 +5,12 @@
     align-items: center;
     margin: 0 10px;
     padding: 10px 0 14px;
+
+    @media screen and (min-width: 768px) {
+      margin: 0 30px;
+      padding: 14px 0;
+    }
+
     &-title {
       font-family: "prox", sans-serif;
       font-weight: 900;
@@ -12,6 +18,9 @@
       font-size: 18px;
       line-height: 21px;
       font-weight: bold;
+      @media screen and (min-width: 768px) {
+        font-size: 25px;
+      }
     }
     &-button {
       background-color: $lightGreen;
@@ -25,11 +34,17 @@
       outline: none;
       cursor: pointer;
       padding: 4px 10px;
+      @media screen and (min-width: 768px) {
+        font-size: 16px;
+      }
     }
     &-banner {
-      margin-left: 10px;
-      margin-right: 10px;
+      margin: 0 10px;
       position: relative;
+
+      @media screen and (min-width: 768px) {
+        margin: 0 30px;
+      }
       &-bg {
         width: 100%;
         object-fit: cover;
@@ -43,6 +58,9 @@
         width: 100%;
         height: 160px;
         z-index: 0;
+        @media screen and (min-width: 768px) {
+          height: 200px;
+        }
       }
       &-proposal {
         position: absolute;
@@ -61,8 +79,11 @@
           font-family: prox;
           background-color: transparent;
 
-          @media screen and (min-width: "400px") {
+          @media screen and (min-width: 400px) {
             width: 20%;
+          }
+          @media screen and (min-width: 768px) {
+            font-size: 28px;
           }
         }
       }
@@ -81,14 +102,16 @@
         &-logo {
           width: 40px;
           height: 40px;
-          background-color: #fff;
+          @media screen and (min-width: 768px) {
+            width: 53px;
+            height: 53px;
+          }
         }
         &-plus {
           width: 10px;
           height: 10px;
           margin-left: 10px;
           margin-right: 10px;
-          background-color: #fff;
         }
       }
     }
